--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body class="page">
     <header class="header">
-        <img class="header__image" src="./images/around-the-us-logo.svg" alt="profile picture">
+        <img class="header__image" src="./images/around-the-us-logo.svg" alt="around the u.s. logo">
     </header>
     <main class="page__main">
         <section class="profile">
             <div class="profile__info-container">
-                <img class="profile__avatar" src="./images/Jacques-Cousteau-image.jpg">
+                <img class="profile__avatar" src="./images/Jacques-Cousteau-image.jpg" alt="profile photo">
                 <div class="profile__info">
                     <h2 class="profile__name">Jacques Cousteau
                         <button class="profile__edit-button"></button>
@@ -28,42 +28,42 @@
         </section>
         <section class="cards">
             <div class="card">
-                <img class="card__image" src="./images/Yosemite Valley.jpg">
+                <img class="card__image" src="./images/Yosemite Valley.jpg" alt="river between forests and mountains in yosemite valley">
                 <div class="card__details">
                     <h2 class="card__name">Yosemite Valley</h2>
                     <button class="card__heart"></button>
                 </div>
             </div>
             <div class="card">
-                <img class="card__image" src="./images/Lake Louise.jpg">
+                <img class="card__image" src="./images/Lake Louise.jpg" alt="lack louise around the mountains">
                 <div class="card__details">
                     <h2 class="card__name">Lake Louise</h2>
                     <button class="card__heart"></button>
                 </div>
             </div>
             <div class="card">
-                <img class="card__image" src="./images/Bald Mountains.jpg">
+                <img class="card__image" src="./images/Bald Mountains.jpg" alt="sunset in bald mountains">
                 <div class="card__details">
                     <h2 class="card__name">Bald Mountains</h2>
                     <button class="card__heart"></button>
                 </div>
             </div>
             <div class="card">
-                <img class="card__image" src="./images/Latemar.jpg">
+                <img class="card__image" src="./images/Latemar.jpg" alt="stars above rocky ice picks in latemar">
                 <div class="card__details">
                     <h2 class="card__name">Latemar</h2>
                     <button class="card__heart"></button>
                 </div>
             </div>
             <div class="card">
-                <img class="card__image" src="./images/Vanoise National Park.jpg">
+                <img class="card__image" src="./images/Vanoise National Park.jpg" alt="lake under the mountains in vanoise national park">
                 <div class="card__details">
                     <h2 class="card__name">Vanoise National Park</h2>
                     <button class="card__heart"></button>
                 </div>
             </div>
             <div class="card">
-                <img class="card__image" src="./images/Lago di Braies.jpg">
+                <img class="card__image" src="./images/Lago di Braies.jpg" alt="boats and a little hut on the lake under the mountains in lago di braies">
                 <div class="card__details">
                     <h2 class="card__name">Lago di Braies</h2>
                     <button class="card__heart"></button>
