fix: secound update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
         <section class="cards">
             <article class="card">
-                <img class="card__image" src="./images/Yosemite Valley.jpg"
+                <img class="card__image" src="./images/Yosemite-Valley.jpg"
                     alt="river between forests and mountains in yosemite valley">
                 <div class="card__details">
                     <h2 class="card__name">Yosemite Valley</h2>
@@ -38,14 +38,14 @@
                 </div>
             </article>
             <article class="card">
-                <img class="card__image" src="./images/Lake Louise.jpg" alt="lack louise around the mountains">
+                <img class="card__image" src="./images/Lake-Louise.jpg" alt="lack louise around the mountains">
                 <div class="card__details">
                     <h2 class="card__name">Lake Louise</h2>
                     <button class="card__heart" type="button" aria-label="like"></button>
                 </div>
             </article>
             <article class="card">
-                <img class="card__image" src="./images/Bald Mountains.jpg" alt="sunset in bald mountains">
+                <img class="card__image" src="./images/Bald-Mountains.jpg" alt="sunset in bald mountains">
                 <div class="card__details">
                     <h2 class="card__name">Bald Mountains</h2>
                     <button class="card__heart" type="button" aria-label="like"></button>
@@ -59,7 +59,7 @@
                 </div>
             </article>
             <article class="card">
-                <img class="card__image" src="./images/Vanoise National Park.jpg"
+                <img class="card__image" src="./images/Vanoise-National-Park.jpg"
                     alt="lake under the mountains in vanoise national park">
                 <div class="card__details">
                     <h2 class="card__name">Vanoise National Park</h2>
@@ -67,7 +67,7 @@
                 </div>
             </article>
             <article class="card">
-                <img class="card__image" src="./images/Lago di Braies.jpg"
+                <img class="card__image" src="./images/Lago-di-Braies.jpg"
                     alt="boats and a little hut on the lake under the mountains in lago di braies">
                 <div class="card__details">
                     <h2 class="card__name">Lago di Braies</h2>
