fix: third update

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     <footer class="footer">
         <p class="footer__copyrigth">&#169; 2021 Around The U.S.</p>
     </footer>
-    <section class="form form_disable">
-        <div class="form__conainer">
-            <button class="form__close-button" type="button" aria-label="close-form"></button>
-            <form name="edit-profile">
-                <h2 class="form__heading">Edit profile</h2>
-                <input class="form__text-input form__text-input_content_name" type="text" placeholder="Name" name="name">
-                <input class="form__text-input form__text-input_content_profession" type="text" placeholder="About me" name="proffesion">
-                <button class="form__save-button" type="submit">Save</button>
+    <section class="popup popup_disable">
+        <div class="popup__conainer">
+            <button class="popup__close-button" type="button" aria-label="close-form"></button>
+            <form class="popup__form" name="edit-profile">
+                <h2 class="popup__heading">Edit profile</h2>
+                <input class="popup__text-input popup__text-input_content_name" type="text" placeholder="Name" name="name">
+                <input class="popup__text-input popup__text-input_content_profession" type="text" placeholder="About me" name="proffesion">
+                <button class="popup__save-button" type="submit">Save</button>
             </form>
         </div>
     </section>
