--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             </div>
         </article>
     </template>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/validate.js"></script>
 </body>
 
 </html>
