--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
             </div>
         </article>
     </template>
-    <script src="./js/script.js"></script>
-    <script src="./js/validate.js"></script>
+    <script type="module" src="./js/card.js"></script>
+    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/FormValidator.js"></script>
 </body>
 
 </html>
