fix: project 7 first update

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </article>
     </template>
-    <script type="module" src="./js/card.js"></script>
+    <script type="module" src="./js/Card.js"></script>
     <script type="module" src="./js/script.js"></script>
     <script type="module" src="./js/FormValidator.js"></script>
 </body>
