fix: project 7 second update

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
         </article>
     </template>
+    <!-- the file name is with upper case (Card) -->
     <script type="module" src="./js/Card.js"></script>
     <script type="module" src="./js/script.js"></script>
     <script type="module" src="./js/FormValidator.js"></script>
