feat: before webpack

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img class="profile__avatar" src="./images/Jacques-Cousteau-image.jpg" alt="profile photo">
                 <div class="profile__info">
                     <div class="profile__name-container">
-                        <h1 class="profile__name">Jacques Cousteau</h1>
+                        <h1 class="profile__name"></h1>
                         <button class="profile__edit-button" type="button" aria-label="edit-profile"></button>
                     </div>
-                    <p class="profile__proffesion">Explorer</p>
+                    <p class="profile__proffesion"></p>
                 </div>
             </div>
             <button class="profile__add-button" type="button" aria-label="add"></button>
@@ -82,8 +82,12 @@
             </div>
         </article>
     </template>
-    <!-- the file name is with upper case (Card) -->
     <script type="module" src="./js/Card.js"></script>
+    <script type="module" src="./js/UserInfo.js"></script>
+    <script type="module" src="./js/Popup.js"></script>
+    <script type="module" src="./js/PopupWithForm.js"></script>
+    <script type="module" src="./js/PopupWithImage.js"></script>
+    <script type="module" src="./js/Section.js"></script>
     <script type="module" src="./js/script.js"></script>
     <script type="module" src="./js/FormValidator.js"></script>
 </body>
