fix: project 8 first update

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                     placeholder="Name" name="name" minlength="2" maxlength="40" required>
                 <span class="popup__text-input-error" id="input-name-error"></span>
                 <input class="popup__text-input popup__text-input_content_profession" id="input-profession" type="text"
-                    placeholder="About me" name="proffesion" minlength="2" maxlength="200" required>
+                    placeholder="About me" name="profession" minlength="2" maxlength="200" required>
                 <span class="popup__text-input-error" id="input-profession-error"></span>
                 <button class="popup__save-button" type="submit">Save</button>
             </form>
