--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,16 @@
 
 <body class="page">
     <header class="header">
-        <img class="header__image" src="<%=require('./images/around-the-us-logo.svg')%>" id="around-the-us-logo" alt="around the u.s. logo">
+        <img class="header__image" src="<%=require('./images/around-the-us-logo.svg')%>" id="around-the-us-logo"
+            alt="around the u.s. logo">
     </header>
     <main class="page__main">
         <section class="profile">
             <div class="profile__info-container">
-                <img class="profile__avatar" id="Jacques-Cousteau-image" alt="profile photo">
+                <div class="profile__avatar-container">
+                    <div class="profile__edit-container"></div>
+                    <img class="profile__avatar" id="Jacques-Cousteau-image" alt="profile photo">
+                </div>
                 <div class="profile__info">
                     <div class="profile__name-container">
                         <h1 class="profile__name"></h1>
@@ -52,20 +56,42 @@
             <button class="popup__close-button" type="button" aria-label="close-form"></button>
             <form class="popup__form" name="add-photo" novalidate>
                 <h2 class="popup__heading">New place</h2>
-                <input class="popup__text-input popup__text-input_content_place-name" id="input-place-name" type="text" placeholder="Title"
-                    name="place-name" minlength="1" maxlength="30" required>
+                <input class="popup__text-input popup__text-input_content_place-name" id="input-place-name" type="text"
+                    placeholder="Title" name="place-name" minlength="1" maxlength="30" required>
                 <span class="popup__text-input-error" id="input-place-name-error"></span>
-                <input class="popup__text-input popup__text-input_content_link" id="input-link" type="url" placeholder="Image link"
-                    name="link" required>
+                <input class="popup__text-input popup__text-input_content_link" id="input-link" type="url"
+                    placeholder="Image link" name="link" required>
                 <span class="popup__text-input-error" id="input-link-error"></span>
                 <button class="popup__save-button" type="submit">Create</button>
+            </form>
+        </div>
+    </section>
+    <section class="popup popup_disable popup_content_change-profile-picture">
+        <div class="popup__conainer">
+            <button class="popup__close-button" type="button" aria-label="close-form"></button>
+            <form class="popup__form popup__form_content_change-profile-picture" name="change-profile-picture" novalidate>
+                <h2 class="popup__heading">Change profile picture</h2>
+                <input class="popup__text-input popup__text-input_content_picture" id="input-picture" type="url"
+                    placeholder="Image link" name="picture" required>
+                <span class="popup__text-input-error" id="input-picture-error"></span>
+                <button class="popup__save-button" type="submit">Save</button>
+            </form>
+        </div>
+    </section>
+    <section class="popup popup_disable popup_content_delete">
+        <div class="popup__conainer">
+            <button class="popup__close-button" type="button" aria-label="close-form"></button>
+            <form class="popup__form popup__form_content_delete" name="delete" novalidate>
+                <h2 class="popup__heading popup__heading">Are you sure?</h2>
+                <button class="popup__save-button popup__save-button_content_delete popup__confirm-button"
+                    type="submit">Yes</button>
             </form>
         </div>
     </section>
     <section class="popup popup_disable popup_content_big-screen-image">
         <div class="big-screen-image">
             <button class="popup__close-button" type="button" aria-label="close-form"></button>
-            <img class="big-screen-image__image" src="./images/Jacques-Cousteau-image.jpg" alt="profile photo">
+            <img class="big-screen-image__image" alt="profile photo">
             <p class="big-screen-image__name">something</p>
         </div>
     </section>
@@ -77,7 +103,10 @@
             </div>
             <div class="card__details">
                 <h2 class="card__name"></h2>
-                <button class="card__heart" type="button" aria-label="like"></button>
+                <div>
+                    <button class="card__heart" type="button" aria-label="like"></button>
+                    <p class="card__like-number">1</p>
+                </div>
             </div>
         </article>
     </template>
